--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "promise"
   ],
   "dependencies": {
-    "load-from-cwd-or-npm": "^1.0.0"
+    "load-from-cwd-or-npm": "^2.0.1"
   },
   "devDependencies": {
     "@shinnn/eslint-config-node": "^3.0.0",
@@ -37,9 +37,6 @@
     "tape": "^4.6.3"
   },
   "eslintConfig": {
-    "extends": "@shinnn/eslint-config-node",
-    "rules": {
-      "no-var": "off"
-    }
+    "extends": "@shinnn/node"
   }
 }
